--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="content-section">
             <div class="content-container">
                 <div class="two-columns-layout">
-                    <!-- Coluna da Esquerda - Educação -->
+                    <!-- LEFT SECTION -->
                     <div class="left-column">
                         <section class="education-section">
                             <h2 class="section-title">Educação</h2>
@@ -80,7 +80,7 @@
                         </section>
                     </div>
                     
-                    <!-- Coluna da Direita - Experiência -->
+                    <!-- RIGHT SECTION -->
                     <div class="right-column">
                         <section class="experience-section">
                             <h2 class="section-title">Experiência Profissional</h2>
