fix/social-links-added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <p class="description">Técnico de Operações e Desenvolvedor Full-Stack</p>
                         
                         <div class="social-icons">
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/davi-moura-1575621a4/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://github.com/ForeverIzi"><i class="fab fa-github"></i></a>
                         </div>
                     </header>
                     
