feat/carrousel-stacks-animation

--- a/index.html
+++ b/index.html
@@ -262,6 +262,82 @@
         </section>
         <section class="knowledge-section">
             <h2 class="section-title">HABILIDADES E CONHECIMENTOS</h2>
+            
+            <!-- CARROUSEL ANIMATION -->
+            <div class="tech-stack-carousel">
+                <div class="tech-stack-track">
+                    <div class="tech-item">
+                        <i class="fab fa-python"></i>
+                        <span>Python</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-js-square"></i>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-microsoft"></i>
+                        <span>TypeScript</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-html5"></i>
+                        <span>HTML5</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-css3-alt"></i>
+                        <span>CSS3</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-python"></i>
+                        <span>Django</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-react"></i>
+                        <span>React</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-microsoft"></i>
+                        <span>C#</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-windows"></i>
+                        <span>.NET</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fas fa-database"></i>
+                        <span>SQL</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fas fa-database"></i>
+                        <span>NoSQL</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-unity"></i>
+                        <span>Unity</span>
+                    </div>
+                     <!-- LOOP -->
+                    <div class="tech-item">
+                        <i class="fab fa-python"></i>
+                        <span>Python</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-js-square"></i>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-microsoft"></i>
+                        <span>TypeScript</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-html5"></i>
+                        <span>HTML5</span>
+                    </div>
+                    <div class="tech-item">
+                        <i class="fab fa-css3-alt"></i>
+                        <span>CSS3</span>
+                    </div>
+                </div>
+            </div>
+
             <div class="divider"></div>
             
             <div class="skills-container">
