--- a/index.html
+++ b/index.html
@@ -9,14 +9,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header class="main-header">
+        <button class="mobile-menu-toggle" aria-label="Toggle menu">
+            <i class="fas fa-bars"></i>
+        </button>   
+             
+        <nav class="main-nav">
+            <ul class="nav-list">
+                <li><a href="#home" class="nav-link">INÍCIO</a></li>
+                <li><a href="#mid-section" class="nav-link">EXPERIÊNCIA</a></li>
+                <li><a href="#stacks" class="nav-link">CONHECIMENTOS</a></li>
+            </ul>
+            <div class="nav-icons">
+                <button class="icon-btn lang-toggle" aria-label="Change language">
+                    <i class="fas fa-language"></i>
+                </button>
+                <button class="icon-btn theme-toggle" aria-label="Toggle theme">
+                    <i class="fas fa-moon"></i>
+                </button>
+            </div>
+        </nav>
+    </header> 
+
     <div class="scroll-container">
 
-        <section class="header-section">
+        <section id="home" class="header-section">
             <div class="main-container">
                 <div class="left-panel">
                     <img id="profile" src="assets/profile2.png" alt="Davi Moura">
                 </div>
                 <div class="right-panel">
+                    
                     <header class="header">
                         <h1>
                             <span class="first-name">Davi</span>
@@ -46,7 +70,7 @@
             </footer>
         </section>
 
-        <section class="content-section">
+        <section id="mid-section" class="content-section">
             <div class="content-container">
                 <div class="two-columns-layout">
                     <!-- LEFT SECTION -->
@@ -260,7 +284,7 @@
                 </div>
             </div>
         </section>
-        <section class="knowledge-section">
+        <section id="stacks" class="knowledge-section">
             <h2 class="section-title">HABILIDADES E CONHECIMENTOS</h2>
 
             <!-- CARROUSEL ANIMATION -->
