fix: bug-with-job-title

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <span class="first-name" data-translate="name">Davi</span>
                             <span class="last-name" data-translate="last-name">José de Moura</span>
                         </h1>
-                        <p class="description">Técnico de Operações e Desenvolvedor Full-Stack</p>
+                        <p class="description" data-translate="description">Analista de Produção e Desenvolvedor Full-Stack</p>
                         
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/in/davi-moura-1575621a4/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
